--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mercado-liebre",
+  "name": "proyecto_mercado_liebre",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
